--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "expressots-rest-setup",
+  "name": "dreamtrip-backend",
   "version": "1.0.0",
   "description": "",
-  "author": "",
+  "author": "JeniferMorati",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.13.0",
     "@types/nodemailer": "^6.4.8",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
@@ -38,12 +39,16 @@
   "dependencies": {
     "@expressots/core": "latest",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.40.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "inversify": "^6.0.1",
     "inversify-binding-decorators": "^4.0.0",
     "inversify-express-utils": "^6.3.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "reflect-metadata": "^0.1.13",
     "tsconfig-paths": "^4.1.2"
