feat: create travel repository

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# Cloudinary
+CLOUDINARY_CLOUD_NAME="storage name"
+CLOUDINARY_API_KEY="api key"
+CLOUDINARY_API_SECRET="secret api key"
+CLOUDINARY_BASE_URL="https://res.cloudinary.com"
+
 # Application
 ENVIRONMENT="Development" #Development, Staging, Production
 PORT=3000
