--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "keywords": [],
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.2",
@@ -37,7 +38,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@expressots/core": "latest",
+    "@expressots/core": "1.7.0",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.40.0",
     "compression": "^1.7.4",
