--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "keywords": [],
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
